First version of paper completed

--- a/WriteUp/report.tex
+++ b/WriteUp/report.tex
@@ -514,6 +514,11 @@ Rudin, Cynthia and Daubechies, Ingrid and Schapire, Robert,
 Wu, Xindong and Kumar, Vipin and Quinlan, Ross and Ghosh, Joydeep and Yang, Qiang and Motoda, Hiroshi and Mclachlan, G. and Ng, Shu Kay Angus and Liu, Bing and Yu, Philip and Zhou, Zhi-Hua and Steinbach, Michael and Hand, David and Steinberg, Dan,
 "Top 10 algorithms in data mining," {\em {Knowledge and Information Systems}}, Vol. 14, 2007.
 
+\bibitem{BoostingStats}
+Jerome Friedman and Trevor Hastie and Robert Tibshirani,
+"Additive Logistic Regression: a Statistical View of Boosting,"
+{\em Annals of Statistics}, Vol. 28, 1998.
+
 \bibitem{schapire}
 Schapire, Robert E.,
 "The Strength of Weak Learnability," Vol. 5, 1990. 
